# ann

./: .gitignore  LICENSE  Makefile  README.md
doc/: Makefile
doc/graphics/dia/: apic-base-address-register.dia  apic-schema.dia  apic-timer-ccr-register.dia  apic-timer-dcr-register.dia  apic-timer-icr-register.dia  apic-timer-lvt-register.dia  bios-int-0x15.dia  disk-usage.dia  fork-copy-on-write.dia  gdt-ldt-access.dia  gdtr-idtr-legacy-format.dia  gdtr-idtr-x64-format.dia  indexing-an-idt.dia  interrupt-handler-stack-ist.dia  interrupt-handler-stack.dia  ioapic-id.dia  ioapic-ioredtbl.dia  ioapic-ioregsel.dia  ioapic-iowin.dia  kernel-info-structure.dia  legacy-4kb-non-pae-page-translation.dia  legacy-4kb-pde-non-pae.dia  legacy-4kb-pte-non-pae.dia  legacy-code-segment-descriptor.dia  legacy-cr3-non-pae.dia  legacy-data-segment-descriptor.dia  legacy-segment-descriptor.dia  local-apic-id.dia  locating-interrupt-handler.dia  long-mode-4kb-pde.dia  long-mode-4kb-pdpe.dia  long-mode-4kb-pml4e.dia  long-mode-4kb-pte.dia  long-mode-code-segment-descriptor.dia  long-mode-cr3.dia  long-mode-data-segment-descriptor.dia  long-mode-interrupt-gate-descriptor.dia  long-mode-page-translation.dia  long-mode-system-segment-descriptor.dia  network-graph.dia  (+20 more)
doc/graphics/gnuplot/: cost_pie_chart.gp  gantt.gp
doc/presentation/: Makefile  dia2pdf.sh  presentation.tex  slides.sty  speech.tex  title.tex
doc/presentation/dia/: lab1.dia  lab2.dia  lab3.dia  lab4.dia  long-mode-4kb-page-translation.dia  os-structure.dia  process-state-diagramm.dia
doc/review/: rpz.tex
doc/tex/: 00-abstract.tex  00-title.tex  10-defines.tex  11-abbrev.tex  12-intro.tex  20-analysis.tex  20-x86_64-intro.tex  21-sources.tex  22-boot.tex  30-design.tex  40-impl.tex  50-econom.tex  60-ecology.tex  80-conclusion.tex  81-biblio.tex  90-appendix1.tex  91-appendix2.tex  doc.bib  doc.tex  rpz.bib  rpz.tex
doc/utils/: texdepend
src/: .bochsrc  .gdbinit  GNUmakefile  Makefile  Makefile.am  autogen.sh  configure.ac
src/boot/: .gdbinit  Makefile  ata.c  boot.S  elf.h  gdt.h  main.c  x86.h
src/include/: elf.h  gdt.h  interrupt.h  mmu.h  syscall.h  x86.h
src/kernel/: Makefile.am  Makefile.part  apic.h  cpu.c  cpu.h  entry.S  interrupt.c  interrupt.h  interrupt_entry.S  ioapic.h  isr_entry.S  kernel.c  kernel.h  keyboard.c  keyboard.h  linker.ld  monitor.c  monitor.h  pic.h  syscall.c  syscall.h  task.c  task.h  thread.c  thread.h  timer.c  tss.h
src/kernel/boot/: Makefile.am  Makefile.part  boot.S  main.c  sign.pl
src/kernel/interrupt/: apic.h  interrupt.c  interrupt.h  interrupt_entry.S  keyboard.c  timer.c  timer.h
src/kernel/lib/: Makefile.am  Makefile.part
src/kernel/lib/console/: terminal.c  terminal.h
src/kernel/lib/disk/: ata.c  ata.h
src/kernel/lib/memory/: layout.h  map.c  map.h  mmu.h
src/kernel/loader/: Makefile.am  Makefile.part  config.h  entry.S  linker.ld  loader.c  long_mode.S
src/kernel/misc/: gdt.h  tss.h  util.h
src/lib/: assert.h  string.c  string.h
src/lib/console/: terminal.c  terminal.h
src/lib/disk/: ata.c
src/lib/fs/: ata.c  ata.h
src/lib/mm/: layout.h  mmap.c  mmap.h
src/loader/: entry.S  linker.ld  loader.c  long_mode.S
src/stdlib/: Makefile.am  Makefile.part  assert.h  stdlib.c  stdlib.h  string.c  string.h  syscall.h
src/user/: Makefile.am  Makefile.part  entry.c  exit.c  fork.c  hello.c  hello2.c  idle.c  linker.ld  read_kernel.c  read_unmap.c  spin.c  sys.h  syscall.c  syscall.h  write_kernel.c  write_unmap.c  yield.c
